web settings page

--- a/QualiJiraPlugin/src/main/resources/QualiJiraPlugin.properties
+++ b/QualiJiraPlugin/src/main/resources/QualiJiraPlugin.properties
@@ -6,3 +6,24 @@ openin-quali-cloud-shell.description=The Open in Quali CloudShell Plugin
 
 cloud-shell-plugin.name=CloudShell Plugin
 cloud-shell-plugin.description=Plugin to open a CloudShell sandbox for a resource that is the subject of a Jira issue
+
+quali.admin.label=Quali Admin
+quali.admin.name.label=Name:
+
+quali.admin.api_url.label=CloudShell sandbox API URL base:
+quali.admin.portal_url.label=CloudShell web portal URL base:
+
+quali.admin.csuser.label=CloudShell admin username:
+quali.admin.cspass.label=CloudShell admin password:
+
+quali.admin.jira_url.label=Jira service URL base:
+quali.admin.issue_type.label=Jira service issue type:
+quali.admin.project_name.label=Jira service project name:
+quali.admin.support_domain.label=Jira service CloudShell domain for support:
+quali.admin.jira_username.label=Jira service Jira API username:
+quali.admin.jira_password.label=Jira service Jira API password:
+quali.admin.ticket_queue.label=Jira service ticket queue name:
+
+quali.admin.sandbox_minutes.label=Sandbox duration (minutes):
+
+quali.admin.save.label=Save
