reservation owner field fix

--- a/QualiJiraPlugin/src/main/resources/QualiJiraPlugin.properties
+++ b/QualiJiraPlugin/src/main/resources/QualiJiraPlugin.properties
@@ -16,6 +16,8 @@ quali.admin.portal_url.label=CloudShell web portal URL base:
 quali.admin.csuser.label=CloudShell admin username:
 quali.admin.cspass.label=CloudShell admin password:
 
+quali.admin.sandbox_owner.label=CloudShell support username:
+
 quali.admin.jira_url.label=Jira service URL base:
 quali.admin.issue_type.label=Jira service issue type:
 quali.admin.project_name.label=Jira service project name:
