add quali icon 15

--- a/QualiJiraPlugin/src/main/resources/QualiJiraPlugin.properties
+++ b/QualiJiraPlugin/src/main/resources/QualiJiraPlugin.properties
@@ -4,7 +4,7 @@ openin-quali-cloud-shell.label=Open in Quali CloudShell
 openin-quali-cloud-shell.name=Open in Quali CloudShell
 openin-quali-cloud-shell.description=The Open in Quali CloudShell Plugin
 
-quali-panel.title=Quali Panel
+quali-panel.title=Quali
 
 cloud-shell-plugin.name=CloudShell Plugin
 cloud-shell-plugin.description=Plugin to open a CloudShell sandbox for a resource that is the subject of a Jira issue
